--- a/data/prefecture.yml
+++ b/data/prefecture.yml
@@ -4,141 +4,235 @@
 1:
   :name: 北海道
   :name_e: hokkaido
+  :name_h: ほっかいどう
+  :name_k: ホッカイドウ
 2:
   :name: 青森県
   :name_e: aomori
+  :name_h: あおもりけん
+  :name_k: アオモリケン
 3:
   :name: 岩手県
   :name_e: iwate
+  :name_h: いわてけん
+  :name_k: イワテケン
 4:
   :name: 宮城県
   :name_e: miyagi
+  :name_h: みやぎけん
+  :name_k: ミヤギケン
 5:
   :name: 秋田県
   :name_e: akita
+  :name_h: あきたけん
+  :name_k: アキタケン
 6:
   :name: 山形県
   :name_e: yamagata
+  :name_h: やまがたけん
+  :name_k: ヤマガタケン
 7:
   :name: 福島県
   :name_e: fukushima
+  :name_h: ふくしまけん
+  :name_k: フクシマケン
 8:
   :name: 茨城県
   :name_e: ibaraki
+  :name_h: いばらきけん
+  :name_k: イバラキケン
 9:
   :name: 栃木県
   :name_e: tochigi
+  :name_h: とちぎけん
+  :name_k: トチギケン
 10:
   :name: 群馬県
   :name_e: gunma
+  :name_h: ぐんまけん
+  :name_k: グンマケン
 11:
   :name: 埼玉県
   :name_e: saitama
+  :name_h: さいたまけん
+  :name_k: サイタマケン
 12:
   :name: 千葉県
   :name_e: chiba
+  :name_h: ちばけん
+  :name_k: チバケン
 13:
   :name: 東京都
   :name_e: tokyo
+  :name_h: とうきょうと
+  :name_k: トウキョウト
 14:
   :name: 神奈川県
   :name_e: kanagawa
+  :name_h: かながわけん
+  :name_k: カナガワケン
 15:
   :name: 新潟県
   :name_e: niigata
+  :name_h: にいがたけん
+  :name_k: ニイガタケン
 16:
   :name: 富山県
   :name_e: toyama
+  :name_h: とやまけん
+  :name_k: トヤマケン
 17:
   :name: 石川県
   :name_e: ishikawa
+  :name_h: いしかわけん
+  :name_k: イシカワケン
 18:
   :name: 福井県
   :name_e: fukui
+  :name_h: ふくいけん
+  :name_k: フクイケン
 19:
   :name: 山梨県
   :name_e: yamanashi
+  :name_h: やまなしけん
+  :name_k: ヤマナシケン
 20:
   :name: 長野県
   :name_e: nagano
+  :name_h: ながのけん
+  :name_k: ナガノケン
 21:
   :name: 岐阜県
   :name_e: gifu
+  :name_h: ぎふけん
+  :name_k: ギフケン
 22:
   :name: 静岡県
   :name_e: shizuoka
+  :name_h: しずおかけん
+  :name_k: シズオカケン
 23:
   :name: 愛知県
   :name_e: aichi
+  :name_h: あいちけん
+  :name_k: アイチケン
 24:
   :name: 三重県
   :name_e: mie
+  :name_h: みえけん
+  :name_k: ミエケン
 25:
   :name: 滋賀県
   :name_e: shiga
+  :name_h: しがけん
+  :name_k: シガケン
 26:
   :name: 京都府
   :name_e: kyoto
+  :name_h: きょうとふ
+  :name_k: キョウトフ
 27:
   :name: 大阪府
   :name_e: osaka
+  :name_h: おおさかふ
+  :name_k: オオサカフ
 28:
   :name: 兵庫県
   :name_e: hyogo
+  :name_h: ひょうごけん
+  :name_k: ヒョウゴケン
 29:
   :name: 奈良県
   :name_e: nara
+  :name_h: ならけん
+  :name_k: ナラケン
 30:
   :name: 和歌山県
   :name_e: wakayama
+  :name_h: わかやまけん
+  :name_k: ワカヤマケン
 31:
   :name: 鳥取県
   :name_e: tottori
+  :name_h: とっとりけん
+  :name_k: トットリケン
 32:
   :name: 島根県
   :name_e: shimane
+  :name_h: しまねけん
+  :name_k: シマネケン
 33:
   :name: 岡山県
   :name_e: okayama
+  :name_h: おかやまけん
+  :name_k: オカヤマケン
 34:
   :name: 広島県
   :name_e: hiroshima
+  :name_h: ひろしまけん
+  :name_k: ヒロシマケン
 35:
   :name: 山口県
   :name_e: yamaguchi
+  :name_h: やまぐちけん
+  :name_k: ヤマグチケン
 36:
   :name: 徳島県
   :name_e: tokushima
+  :name_h: とくしまけん
+  :name_k: トクシマケン
 37:
   :name: 香川県
   :name_e: kagawa
+  :name_h: かがわけん
+  :name_k: カガワケン
 38:
   :name: 愛媛県
   :name_e: ehime
+  :name_h: えひめけん
+  :name_k: エヒメケン
 39:
   :name: 高知県
   :name_e: kochi
+  :name_h: こうちけん
+  :name_k: コウチケン
 40:
   :name: 福岡県
   :name_e: fukuoka
+  :name_h: ふくおかけん
+  :name_k: フクオカケン
 41:
   :name: 佐賀県
   :name_e: saga
+  :name_h: さがけん
+  :name_k: サガケン
 42:
   :name: 長崎県
   :name_e: nagasaki
+  :name_h: ながさきけん
+  :name_k: ナガサキケン
 43:
   :name: 熊本県
   :name_e: kumamoto
+  :name_h: くまもとけん
+  :name_k: クマモトケン
 44:
   :name: 大分県
   :name_e: oita
+  :name_h: おおいたけん
+  :name_k: オオイタケン
 45:
   :name: 宮崎県
   :name_e: miyazaki
+  :name_h: みやざきけん
+  :name_k: ミヤザキケン
 46:
   :name: 鹿児島県
   :name_e: kagoshima
+  :name_h: かごしまけん
+  :name_k: カゴシマケン
 47:
   :name: 沖縄県
   :name_e: okinawa
+  :name_h: おきなわけん
+  :name_k: オキナワケン
