--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,6 @@ matrix:
       gemfile: gemfiles/rails50.gemfile
     - rvm: 2.1.8
       gemfile: gemfiles/rails50.gemfile
+notifications:
+  email:
+    - false
