Travis の allow_failures に Ruby 1.9.3 を追加
tins gem が v1.7 より Ruby 1.9.3 のサポートを外したため
Travis のビルドが失敗するようになった。

Appraisals 内でバージョンを固定しても良いかもしれない。

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ gemfile:
   - gemfiles/rails50.gemfile
 matrix:
   allow_failures:
+    - rvm: 1.9.3
     - rvm: ruby-head
   fast_finish: true
   exclude:
