--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ cache: bundler
 rvm:
   - 1.9.3
   - 2.0.0
-  - 2.1.8
-  - 2.2.4
-  - 2.3.3
-  - 2.4.0
+  - 2.1.10
+  - 2.2.10
+  - 2.3.7
+  - 2.4.4
+  - 2.5.0
   - ruby-head
 gemfile:
   - gemfiles/rails32.gemfile
@@ -15,6 +16,8 @@ gemfile:
   - gemfiles/rails41.gemfile
   - gemfiles/rails42.gemfile
   - gemfiles/rails50.gemfile
+  - gemfiles/rails51.gemfile
+  - gemfiles/rails52.gemfile
 matrix:
   allow_failures:
     - rvm: 1.9.3
@@ -22,10 +25,19 @@ matrix:
   fast_finish: true
   exclude:
     - rvm: 1.9.3
-      gemfile: gemfiles/rails50.gemfile
+      gemfile:
+        - gemfiles/rails50.gemfile
+        - gemfiles/rails51.gemfile
+        - gemfiles/rails52.gemfile
     - rvm: 2.0.0
-      gemfile: gemfiles/rails50.gemfile
-    - rvm: 2.1.8
-      gemfile: gemfiles/rails50.gemfile
+      gemfile:
+        - gemfiles/rails50.gemfile
+        - gemfiles/rails51.gemfile
+        - gemfiles/rails52.gemfile
+    - rvm: 2.1.10
+      gemfile:
+        - gemfiles/rails50.gemfile
+        - gemfiles/rails51.gemfile
+        - gemfiles/rails52.gemfile
 notifications:
   email: false
