--- a/.travis.yml
+++ b/.travis.yml
@@ -7,19 +7,27 @@ branches:
     - master
 
 rvm:
-  - 2.3.8
-  - 2.4.5
-  - 2.5.3
-  - 2.6.1
+  - 2.3
+  - 2.4
+  - 2.5
+  - 2.6
 
 gemfile:
   - gemfiles/rails42.gemfile
   - gemfiles/rails50.gemfile
   - gemfiles/rails51.gemfile
   - gemfiles/rails52.gemfile
+  - gemfiles/rails60.gemfile
 
 matrix:
   fast_finish: true
+  exclude:
+    - gemfile: gemfiles/rails60.gemfile
+      rvm: 2.3
+    - gemfile: gemfiles/rails60.gemfile
+      rvm: 2.4
+    - gemfile: gemfiles/rails60.gemfile
+      rvm: 2.5
 
 notifications:
   email: false
