--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
           - 2.4
           - 2.5
           - 2.6
+          - 2.7
         gemfile:
           - rails42.gemfile
           - rails50.gemfile
@@ -31,6 +32,8 @@ jobs:
             gemfile: rails60.gemfile
           - ruby: 2.5
             gemfile: rails60.gemfile
+          - ruby: 2.7
+            gemfile: rails42.gemfile
 
     env:
       CI: true
