--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,28 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  matrix:
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v2
+
+      - name: Setup ruby
+        uses: actions/setup-ruby@v1
+        with:
+          # Set to `TargetRubyVersion` in `.rubocop.yml`
+          ruby-version: 2.4
+
+      - name: Bundle
+        run: |
+          gem install bundler
+          bundle install --jobs 4 --retry 3
+
+      - name: Lint
+        run: bundle exec rubocop
+
+  test:
     runs-on: ubuntu-latest
 
     strategy:
@@ -52,7 +73,7 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
 
-      - name: Build
+      - name: Bundle
         run: |
           gem install bundler
           bundle install --jobs 4 --retry 3
