Update zip code data

--- a/data/zip.yml
+++ b/data/zip.yml
@@ -1,4 +1,5 @@
 # { prefecture_code: [[from_zip_1, to_zip_1], [from_zip_2, to_zip_2], ...], ... }
+# Last updated: 2021-02-10 05:59:09 UTC
 ---
 1:
 - - 10000
@@ -41,6 +42,8 @@
   - 3491221
 10:
 - - 3700000
+  - 3701506
+- - 3701511
   - 3792314
 - - 3840097
   - 3840097
@@ -51,6 +54,8 @@
   - 3491216
 - - 3500001
   - 3691912
+- - 3701507
+  - 3701507
 12:
 - - 2600000
   - 2995506
@@ -110,14 +115,14 @@
 - - 4314121
   - 4314121
 - - 4400001
-  - 4970058
-- - 4980000
+  - 4980000
+- - 4980001
   - 4980069
 24:
 - - 4980000
   - 4980000
 - - 4980801
-  - 4980823
+  - 4980824
 - - 5100000
   - 5195835
 - - 6471321
@@ -231,8 +236,8 @@
 - - 8391421
   - 8391421
 - - 8700001
-  - 8710000
-- - 8710001
+  - 8701223
+- - 8710000
   - 8710208
 - - 8710311
   - 8710716
