Run scheduled build at 09:00 (JST) on Monday

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,8 @@ on:
       - master
   pull_request:
     types: [opened, synchronize, reopened]
+  schedule:
+    - cron:  '0 0 * * 1'
 
 jobs:
   lint:
