--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
           - '2.6'
           - '2.7'
           - '3.0'
+          - '3.1'
         gemfile:
           - rails50.gemfile
           - rails51.gemfile
@@ -62,6 +63,12 @@ jobs:
           - ruby: '3.0'
             gemfile: rails51.gemfile
           - ruby: '3.0'
+            gemfile: rails52.gemfile
+          - ruby: '3.1'
+            gemfile: rails50.gemfile
+          - ruby: '3.1'
+            gemfile: rails51.gemfile
+          - ruby: '3.1'
             gemfile: rails52.gemfile
 
     env:
