--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,18 +15,16 @@ jobs:
 
     steps:
       - name: Checkout source
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup ruby
         uses: ruby/setup-ruby@v1
         with:
           # Set to `TargetRubyVersion` in `.rubocop.yml`
-          ruby-version: '2.4'
+          ruby-version: '2.5'
 
       - name: Bundle
-        run: |
-          gem install bundler
-          bundle install --jobs 4 --retry 3
+        run: bundle install --jobs 4 --retry 3
 
       - name: Lint
         run: bundle exec rubocop
