--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,13 +96,10 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
 
       - name: Bundle
-        run: |
-          gem install bundler
-          bundle install --jobs 4 --retry 3
+        run:  bundle install --jobs 4 --retry 3
 
       - name: Test
-        run: |
-          bundle exec rspec
+        run: bundle exec rspec
 
       - name: Coveralls Parallel
         uses: coverallsapp/github-action@master
