--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,7 @@ jobs:
           - '2.7'
           - '3.0'
           - '3.1'
+          - '3.2'
         gemfile:
           - rails50.gemfile
           - rails51.gemfile
@@ -75,6 +76,12 @@ jobs:
             gemfile: rails51.gemfile
           - ruby: '3.1'
             gemfile: rails52.gemfile
+          - ruby: '3.2'
+            gemfile: rails50.gemfile
+          - ruby: '3.2'
+            gemfile: rails51.gemfile
+          - ruby: '3.2'
+            gemfile: rails52.gemfile
 
     env:
       CI: true
@@ -83,7 +90,7 @@ jobs:
 
     steps:
       - name: Checkout source
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup System
         run: |
