--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,7 @@ jobs:
           - rails61.gemfile
           - rails70.gemfile
           - rails71.gemfile
+          - rails72.gemfile
         exclude:
           - ruby: '2.4'
             gemfile: rails60.gemfile
@@ -60,6 +61,8 @@ jobs:
             gemfile: rails70.gemfile
           - ruby: '2.4'
             gemfile: rails71.gemfile
+          - ruby: '2.4'
+            gemfile: rails72.gemfile
           - ruby: '2.5'
             gemfile: rails60.gemfile
           - ruby: '2.5'
@@ -68,16 +71,24 @@ jobs:
             gemfile: rails70.gemfile
           - ruby: '2.5'
             gemfile: rails71.gemfile
+          - ruby: '2.5'
+            gemfile: rails72.gemfile
           - ruby: '2.6'
             gemfile: rails70.gemfile
           - ruby: '2.6'
             gemfile: rails71.gemfile
+          - ruby: '2.6'
+            gemfile: rails72.gemfile
+          - ruby: '2.7'
+            gemfile: rails72.gemfile
           - ruby: '3.0'
             gemfile: rails50.gemfile
           - ruby: '3.0'
             gemfile: rails51.gemfile
           - ruby: '3.0'
             gemfile: rails52.gemfile
+          - ruby: '3.0'
+            gemfile: rails72.gemfile
           - ruby: '3.1'
             gemfile: rails50.gemfile
           - ruby: '3.1'
