--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,7 @@ jobs:
           - '3.1'
           - '3.2'
           - '3.3'
+          - '3.4'
         gemfile:
           - rails50.gemfile
           - rails51.gemfile
@@ -106,6 +107,12 @@ jobs:
           - ruby: '3.3'
             gemfile: rails51.gemfile
           - ruby: '3.3'
+            gemfile: rails52.gemfile
+          - ruby: '3.4'
+            gemfile: rails50.gemfile
+          - ruby: '3.4'
+            gemfile: rails51.gemfile
+          - ruby: '3.4'
             gemfile: rails52.gemfile
 
     env:
