--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,7 @@ jobs:
           - rails70.gemfile
           - rails71.gemfile
           - rails72.gemfile
+          - rails80.gemfile
         exclude:
           - ruby: '2.4'
             gemfile: rails60.gemfile
@@ -64,6 +65,8 @@ jobs:
             gemfile: rails71.gemfile
           - ruby: '2.4'
             gemfile: rails72.gemfile
+          - ruby: '2.4'
+            gemfile: rails80.gemfile
           - ruby: '2.5'
             gemfile: rails60.gemfile
           - ruby: '2.5'
@@ -74,14 +77,20 @@ jobs:
             gemfile: rails71.gemfile
           - ruby: '2.5'
             gemfile: rails72.gemfile
+          - ruby: '2.5'
+            gemfile: rails80.gemfile
           - ruby: '2.6'
             gemfile: rails70.gemfile
           - ruby: '2.6'
             gemfile: rails71.gemfile
           - ruby: '2.6'
             gemfile: rails72.gemfile
+          - ruby: '2.6'
+            gemfile: rails80.gemfile
           - ruby: '2.7'
             gemfile: rails72.gemfile
+          - ruby: '2.7'
+            gemfile: rails80.gemfile
           - ruby: '3.0'
             gemfile: rails50.gemfile
           - ruby: '3.0'
@@ -90,12 +99,16 @@ jobs:
             gemfile: rails52.gemfile
           - ruby: '3.0'
             gemfile: rails72.gemfile
+          - ruby: '3.0'
+            gemfile: rails80.gemfile
           - ruby: '3.1'
             gemfile: rails50.gemfile
           - ruby: '3.1'
             gemfile: rails51.gemfile
           - ruby: '3.1'
             gemfile: rails52.gemfile
+          - ruby: '3.1'
+            gemfile: rails80.gemfile
           - ruby: '3.2'
             gemfile: rails50.gemfile
           - ruby: '3.2'
