Create Gemfile manually and remove appraisal gem

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,88 +45,88 @@ jobs:
           - '3.3'
           - '3.4'
         gemfile:
-          - rails50.gemfile
-          - rails51.gemfile
-          - rails52.gemfile
-          - rails60.gemfile
-          - rails61.gemfile
-          - rails70.gemfile
-          - rails71.gemfile
-          - rails72.gemfile
-          - rails80.gemfile
+          - rails-5-0.gemfile
+          - rails-5-1.gemfile
+          - rails-5-2.gemfile
+          - rails-6-0.gemfile
+          - rails-6-1.gemfile
+          - rails-7-0.gemfile
+          - rails-7-1.gemfile
+          - rails-7-2.gemfile
+          - rails-8-0.gemfile
         exclude:
           - ruby: '2.4'
-            gemfile: rails60.gemfile
+            gemfile: rails-6-0.gemfile
           - ruby: '2.4'
-            gemfile: rails61.gemfile
+            gemfile: rails-6-1.gemfile
           - ruby: '2.4'
-            gemfile: rails70.gemfile
+            gemfile: rails-7-0.gemfile
           - ruby: '2.4'
-            gemfile: rails71.gemfile
+            gemfile: rails-7-1.gemfile
           - ruby: '2.4'
-            gemfile: rails72.gemfile
+            gemfile: rails-7-2.gemfile
           - ruby: '2.4'
-            gemfile: rails80.gemfile
+            gemfile: rails-8-0.gemfile
           - ruby: '2.5'
-            gemfile: rails60.gemfile
+            gemfile: rails-6-0.gemfile
           - ruby: '2.5'
-            gemfile: rails61.gemfile
+            gemfile: rails-6-1.gemfile
           - ruby: '2.5'
-            gemfile: rails70.gemfile
+            gemfile: rails-7-0.gemfile
           - ruby: '2.5'
-            gemfile: rails71.gemfile
+            gemfile: rails-7-1.gemfile
           - ruby: '2.5'
-            gemfile: rails72.gemfile
+            gemfile: rails-7-2.gemfile
           - ruby: '2.5'
-            gemfile: rails80.gemfile
+            gemfile: rails-8-0.gemfile
           - ruby: '2.6'
-            gemfile: rails70.gemfile
+            gemfile: rails-7-0.gemfile
           - ruby: '2.6'
-            gemfile: rails71.gemfile
+            gemfile: rails-7-1.gemfile
           - ruby: '2.6'
-            gemfile: rails72.gemfile
+            gemfile: rails-7-2.gemfile
           - ruby: '2.6'
-            gemfile: rails80.gemfile
+            gemfile: rails-8-0.gemfile
           - ruby: '2.7'
-            gemfile: rails72.gemfile
+            gemfile: rails-7-2.gemfile
           - ruby: '2.7'
-            gemfile: rails80.gemfile
+            gemfile: rails-8-0.gemfile
           - ruby: '3.0'
-            gemfile: rails50.gemfile
+            gemfile: rails-5-0.gemfile
           - ruby: '3.0'
-            gemfile: rails51.gemfile
+            gemfile: rails-5-1.gemfile
           - ruby: '3.0'
-            gemfile: rails52.gemfile
+            gemfile: rails-5-2.gemfile
           - ruby: '3.0'
-            gemfile: rails72.gemfile
+            gemfile: rails-7-2.gemfile
           - ruby: '3.0'
-            gemfile: rails80.gemfile
+            gemfile: rails-8-0.gemfile
           - ruby: '3.1'
-            gemfile: rails50.gemfile
+            gemfile: rails-5-0.gemfile
           - ruby: '3.1'
-            gemfile: rails51.gemfile
+            gemfile: rails-5-1.gemfile
           - ruby: '3.1'
-            gemfile: rails52.gemfile
+            gemfile: rails-5-2.gemfile
           - ruby: '3.1'
-            gemfile: rails80.gemfile
+            gemfile: rails-8-0.gemfile
           - ruby: '3.2'
-            gemfile: rails50.gemfile
+            gemfile: rails-5-0.gemfile
           - ruby: '3.2'
-            gemfile: rails51.gemfile
+            gemfile: rails-5-1.gemfile
           - ruby: '3.2'
-            gemfile: rails52.gemfile
+            gemfile: rails-5-2.gemfile
           - ruby: '3.3'
-            gemfile: rails50.gemfile
+            gemfile: rails-5-0.gemfile
           - ruby: '3.3'
-            gemfile: rails51.gemfile
+            gemfile: rails-5-1.gemfile
           - ruby: '3.3'
-            gemfile: rails52.gemfile
+            gemfile: rails-5-2.gemfile
           - ruby: '3.4'
-            gemfile: rails50.gemfile
+            gemfile: rails-5-0.gemfile
           - ruby: '3.4'
-            gemfile: rails51.gemfile
+            gemfile: rails-5-1.gemfile
           - ruby: '3.4'
-            gemfile: rails52.gemfile
+            gemfile: rails-5-2.gemfile
 
     env:
       CI: true
